datafeeder: hook up mock external services
